# greengrocer

./: .pre-commit-config.yaml  README.md  create_extension.sh  pyproject.toml  pytest.ini
src/: settings.py  urls.py
src/extensions/auth/: admin.py  apps.py  models.py  urls.py  views.py
src/extensions/auth/migrations/: 0001_initial.py
src/extensions/auth/tests/: test_me.py
templates/django_app_template/: admin.py  apps.py
